package de.jquast.domain.shared;

public interface RewardSource {

    double getReward();

}
